--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,10 +14,22 @@
 
     <header>
       <% if user_signed_in? %>
-        <li>
-          <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-        </li>
+      <li>
+        <%= link_to "トップページ", root_path %>
+      </li>
+      <li>
+        <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+      </li>
+      <li>
+        <%= link_to "マイページ", user_path(current_user) %>
+      </li>
+      <li>
+        <%= link_to "投稿する", new_diary_path(current_user) %>
+      </li>
       <% else %>
+       <li>
+        <%= link_to "トップページ", root_path %>
+       </li>
         <li>
           <%= link_to "新規登録", new_user_registration_path %>
         </li>
