--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <h2>マイページ</h2>
 
 
-<h2>画像</h2>
+
 <% if @user.image.attached? %>
   <%= image_tag @user.image, size: "50x50" %>
 <% else %>
@@ -10,6 +10,6 @@
 
 <%= @user.name %>
 <%= @user.email %>
-
+<%= link_to "マイ日記", post_path(current_user) %>
 <%= link_to "編集", edit_user_path(current_user) %>
 
