--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,6 @@
-<日記投稿>
+<h1>新規投稿</h1>
 
-<%= form_with model: Diary.new do |f| %>
+<%= form_with model: Post.new do |f| %>
   <h4>タイトル</h4>
   <%= f.text_field :title %>
 
