--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,36 +1,38 @@
-<h2>サインアップ</h2>
+<div class="container">
+  <div class="row">
+    <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-4">
+      <h2>新規登録</h2>
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 
 
-<%= form_with model: @user, url: user_registration_path do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+          <div class="field">
+            <%= f.label :氏名 %><br />
+            <%= f.text_field :name, autofocus: true, autocomplete: "name",class:"w-100" %>
+          </div>
 
+          <div class="field">
+            <%= f.label :メールアドレス %><br />
+            <%= f.email_field :email, autofocus: true, autocomplete: "email",class:"w-100" %>
+          </div>
 
-  <div class="field">
-    <%= f.label :名前 %><br>
-    <%= f.text_field :name %>
-  </div>
+          <div class="field">
+            <%= f.label :パスワード %>
+            <% if @minimum_password_length %>
+            <em>(<%= @minimum_password_length %> 文字以上)</em>
+            <% end %><br />
+            <%= f.password_field :password, autocomplete: "new-password",class:"w-100" %>
+          </div>
 
-  <div class="field">
-    <%= f.label :メールアドレス %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+          <div class="field">
+            <%= f.label :パスワード確認 %><br />
+            <%= f.password_field :password_confirmation, autocomplete: "new-password",class:"w-100" %>
+          </div>
+           <br>
+          <div class="actions">
+            <%= f.submit "新規登録",class:"w-75 btn btn-success" %>
+          </div>
+        <% end %>
+     </div>
+   </div>
+</div>
 
-  <div class="field">
-    <%= f.label :パスワード %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> 文字以内)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :パスワード（再確認） %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "サインアップ" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
