--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,42 +6,76 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
+    <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+    <header class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <h2><%= link_to "Evry", root_path %></h2>
 
-    <header>
       <% if user_signed_in? %>
-      <li>
-        <%= link_to "トップページ", root_path %>
-      </li>
-      <li>
+       <li class="nav-item m-3">
         <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-      </li>
-      <li>
-        <%= link_to "マイページ", user_path(current_user) %>
-      </li>
-      <li>
-        <%= link_to "投稿する", new_post_path(current_user) %>
-      </li>
-      <li>
-        <%= link_to "みんなの日記", posts_path %>
-      </li>
-      <% else %>
-       <li>
-        <%= link_to "トップページ", root_path %>
        </li>
-        <li>
-          <%= link_to "新規登録", new_user_registration_path %>
+
+       <li class="nav-item m-3">
+        <%= link_to "マイページ", user_path(current_user) %>
+       </li>
+
+       <li class="nav-item m-3">
+        <%= link_to "投稿する", new_post_path(current_user) %>
+       </li>
+
+       <li class="nav-item m-3">
+        <%= link_to "みんなの日記", posts_path %>
+       </li>
+
+      <% else %>
+
+       <li class="nav-item m-3">
+        <%= link_to "トップページ", root_path %>
         </li>
-        <li>
-          <%= link_to "ログイン", new_user_session_path %>
-        </li>
+
+       <li class="nav-item m-3">
+        <%= link_to "新規登録", new_user_registration_path %>
+       </li>
+
+       <li class="nav-item m-3">
+        <%= link_to "ログイン", new_user_session_path %>
+       </li>
+
       <% end %>
     </header>
     <%= yield %>
   </body>
+
+  <footer class="fixed-bottom" style="height:130px; background-color: #f5af7d;">
+        <div class="container">
+          <div class="row no-gutters">
+            <div class="col-md-4">
+              <p>日記コミュニティサイト</p>
+            </div>
+            <div class="col-md-8">
+              <h6 class="text-white mt-2 mb-3">Link</h6>
+              <ul class="p-0 list-unstyled">
+                <li>
+                  <a href="" title="About" class="text-white-50">会社概要</a>
+                </li>
+                <li>
+                  <a href="" title="License informations" class="text-white-50">プライバシーポリシー</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+    </footer>
+  </div>
+ </body>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+</html>
+
 
 </html>
