--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,24 +1,33 @@
 <h2>みんなの日記</h2>
 
-<table class="table table-hover table-bordered table-condensed">
-    <thead>
-      <tr class="info">
-        <th>タイトル</th>
-        <th>日記</th>
-      </tr>
-    </thead>
 
-  <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-        <td class="text-left">
-          <%= post.title %>
-        </td>
-        <td class="text-left">
+<div style="height: 1300px">
+
+<% @users.each do |user| %>
+<% @posts.each do |post| %>
+  <div class="container">
+    <div class="row">
+      <div class="card" style="width: 1000px; height: 150px; border: 2px solid; margin: 10px;">
+          <span>
+            <% if user.image.attached? %>
+             <%= image_tag user.image, size: "50x50", class: "rounded-circle", size: "50x50" %>
+            <% else %>
+             <%= image_tag 'no_image', size: "50x50" %>
+            <% end %>
+            <%= post.created_at.strftime("%Y年%m月%d日") %>
+          </span>
+          <%= user.name %><br>
+          <%= post.title %><br>
           <%= post.body %>
-        </td>
-    <% end %>
-     </td>
-      </tr>
-  </tbody>
-</table>
+      </div>
+    </div>
+  </div>
+<% end %>
+<% end %>
+<div class="container">
+  <div class="row">
+    <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-4">
+         <font size="5"><%= paginate @posts %></font>
+    </div>
+  </div>
+</div>
