--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,11 +1,21 @@
-<h1>新規投稿</h1>
+<div class="container">
+  <div class="row">
+    <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
 
-<%= form_with model: Post.new do |f| %>
-  <h4>タイトル</h4>
-  <%= f.text_field :title %>
+      <br>
+     <br>
+      <h1>新規投稿</h1>
 
-  <h4>本文</h4>
-  <%= f.text_area :body %>
+      <%= form_with model: Post.new do |f| %>
+        <h4>タイトル</h4>
+        <%= f.text_field :title,class:"w-75" %>
+        <br><br>
+        <h4>本文</h4>
+        <%= f.text_area :body,class:"w-100" %>
+        <br><br>
+        <%= f.submit '投稿',class:"w-75" %>
+      <% end %>
+    </div>
+  </div>
+</div>
 
-  <%= f.submit '投稿' %>
-<% end %>
