--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,15 +1,28 @@
-<h2>編集画面</h2>
+<div class="container">
+  <div class="row">
+   <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-4">
+      <br>
+      <h2>編集画面</h2>
+      <br>
+      <%= form_with model: @user do |f| %>
 
 
-<%= form_with model: @user do |f| %>
+        <h4>名前</h4>
+        <%= f.text_field :name, class:"w-100" %>
+        <br><br>
+        <h4>メールアドレス</h4>
+        <%= f.text_field :email, class:"w-100" %>
+        <br><br>
+        <h4>プロフィール画像</h4>
+        <%= f.file_field :image, accept: "image/*",class:"w-100"%>
+        <br><br>
+        <%= f.submit '保存',class:"w-100" %>
+        <br>
 
-  <h4>名前</h4>
-  <%= f.text_field :name %>
+      <% end %>
+      <br>
+      <%= link_to "戻る", user_path,class:"w-75 btn btn-primary" %>
+    </div>
+  </div>
+</div>
 
-  <h4>メールアドレス</h4>
-  <%= f.text_field :email %>
-
-  <%= f.submit '保存' %>
-
-<% end %>
-<%= link_to "戻る", user_path %>
