--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,11 @@
         <%= link_to "みんなの日記", posts_path %>
        </li>
 
+       <li class="nav-item m-3">
+        <%= render 'searches/search' %>
+       </li>
+
+
       <% else %>
 
        <li class="nav-item m-3">
